--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,4 @@
 <div class="content">
-  <h1><a href="#!/list"> Todo App</a></h1>
+  <h1><a href="/list"> Todo App</a></h1>
   <p>Click the above Todo App to use the App</p>
 </div>
