--- a/views/todo.html
+++ b/views/todo.html
@@ -1,7 +1,7 @@
 <div class="content">
   <h1>Your Todo App</h1>
   <input type="text" ng-model="search" placeholder="Search Your Todo" />
-  <ul>
+  <ul id="todo-list">
     <li ng-repeat="todo in todos | orderBy:order | filter:search">
       <div ng-click="statusOfTodo(todo)">
         <h3>
@@ -11,8 +11,20 @@
       </div>
     </li>
   </ul>
-  <form ng-submit="addDetails()">
-    <input type="text" placeholder="Add Todo" ng-model="newTodo.list" />
-    <input type="submit" value="Add Details" />
+  <form ng-submit="addDetails()" name="todoForm">
+    <input
+      type="text"
+      placeholder="Add Todo"
+      ng-model="newTodo.list"
+      ng-required="true"
+      name="todo"
+    />
+    <div ng-show="todoForm.todo.$touched && todoForm.todo.$invalid">
+      <small style="color: red; text-align: center; display: block"
+        >Enter a Todo</small
+      >
+    </div>
+    <input type="submit" value="Add Details" ng-disabled="todoForm.$invalid" />
   </form>
+  <button ng-click="removeAllTodo()">Remove All</button>
 </div>
